# imax

./: Cargo.toml  Dioxus.toml
.superpowers/brainstorm/12638-1773576291/: .server-stopped  architecture-approaches.html  crypto-design.html  data-flow.html  data-model.html  imax-telegram-style.html  project-structure.html  realmax-ui-design.html  realmax-ui-futuristic.html  ui-screens-v2.html  ui-screens.html  wire-protocol.html
assets/: main.css
crates/imax-core/: Cargo.toml
crates/imax-core/src/: error.rs  lib.rs
crates/imax-core/src/chat/: manager.rs  mod.rs  types.rs
crates/imax-core/src/crypto/: e2e.rs  mod.rs
crates/imax-core/src/identity/: keypair.rs  mod.rs  profile.rs
crates/imax-core/src/network/: discovery.rs  mod.rs  node.rs  protocol.rs
crates/imax-core/src/storage/: db.rs  mod.rs  models.rs
docs/superpowers/plans/: 2026-03-15-imax-implementation.md
docs/superpowers/specs/: 2026-03-15-dchat-p2p-messenger-design.md
src/: app.rs  main.rs  state.rs
src/components/: chat_header.rs  chat_view.rs  invite_modal.rs  message_bubble.rs  message_input.rs  mod.rs  settings_modal.rs  sidebar.rs  test_p2p.rs
src/views/: main_layout.rs  mod.rs  onboarding.rs
