[workspace]
members = ["crates/imax-core"]
resolver = "2"

[package]
name = "imax"
version = "0.1.0"
edition = "2024"

[dependencies]
imax-core = { path = "crates/imax-core" }
dioxus = { version = "0.7", features = ["desktop"] }
tokio = { version = "1", features = ["full"] }
bs58 = "0.5"
iroh = "0.96"
