[workspace]
members = ["crates/imax-core"]
resolver = "2"

[package]
name = "imax"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "p2p-debug"
path = "src/bin/p2p_debug.rs"

[dependencies]
imax-core = { path = "crates/imax-core" }
dioxus = { version = "0.7", features = ["desktop"] }
tokio = { version = "1", features = ["full"] }
bs58 = "0.5"
iroh = "0.96"
uuid = { version = "1", features = ["v4"] }
