[package]
name = "imax-core"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["sync"] }
bip39 = { version = "2", features = ["rand"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
curve25519-dalek = { version = "4", features = ["digest"] }
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
chacha20poly1305 = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }
rusqlite_migration = "1"
postcard = { version = "1", features = ["alloc"] }
iroh = "0.96"
bytes = "1"
bs58 = "0.5"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"

